--- a/themes/seven/style.css
+++ b/themes/seven/style.css
@@ -5,7 +5,7 @@
 body {
   color: #000;
   background: #fff;
-  font: normal 81.3%/1.538em "Lucida Grande", "Lucida Sans Unicode", sans-serif;
+  font: normal 81.3%/1.538em "PT Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 }
 a {
   color: #0074BD;
